Fix z-index on filter accordions that caused to show the blocks over the main menu

--- a/great-western-wine-theme/assets/scss/components/foundation/accordion/_accordion.scss
+++ b/great-western-wine-theme/assets/scss/components/foundation/accordion/_accordion.scss
@@ -81,7 +81,7 @@
             width: 100%;
             left: 0;
             top: 100%;
-            z-index: 100;
+            z-index: 10;
         }
 
         .form-minMaxRow {
